--- a/frontend/template/index.ejs
+++ b/frontend/template/index.ejs
@@ -2,7 +2,7 @@
 <html lang="zh-CN">
 
 <head>
-    <title>我的会议室</title>
+    <title>自考英语查询</title>
     <meta charset="UTF-8">
     <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
     <link rel="icon" href="assets/logo.png" type="image/png">
