--- a/frontend/theme/index.less
+++ b/frontend/theme/index.less
@@ -12,6 +12,8 @@ html, body {
 body {
     background: #f5f7f9;
     min-height: 100%;
+    max-width: 600px;
+    margin: auto;
 }
 .ivu-table-cell {
     overflow: unset;
