更新样式和加入帮助。

--- a/frontend/theme/index.less
+++ b/frontend/theme/index.less
@@ -14,6 +14,7 @@ body {
     min-height: 100%;
     max-width: 600px;
     margin: auto;
+    font: 300 1em/1.8 PingFang SC,Lantinghei SC,Microsoft Yahei,Roboto,Helvetica Neue,Helvetica,Arial,sans-serif;
 }
 .ivu-table-cell {
     overflow: unset;
