添加菜单和登录modal。

--- a/frontend/theme/index.less
+++ b/frontend/theme/index.less
@@ -44,3 +44,9 @@ a {
 .ivu-menu-horizontal.ivu-menu-light:after {
     background: transparent;
 }
+
+.ivu-menu-item {
+    i {
+        margin-right: 6px;
+    }
+}
