完成笔记显示功能。

--- a/frontend/theme/index.less
+++ b/frontend/theme/index.less
@@ -51,10 +51,14 @@ a {
     }
 }
 
+.ivu-btn-text:focus {
+    box-shadow: none;
+}
 // markdown style
 .markdown-preview {
+    font-size: .8em;
     h1, h2, h3, h4, h5, h6, p, blockquote {
-        margin: 1em auto;
+        margin: .5em auto;
     }
     code { 
         background-color: #d5d5d5; 
